--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
     margin: 0;
 }
 
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+
 header {
     background-color: #1A5C38;
     background-image: linear-gradient(to bottom, #3BD27F, #34925f, #1A5C38);
